# server/src/openapi/__fixtures__/openapi.baseline.json
@@ -649,6 +649,13 @@
           "created_at": {
             "type": "string"
           },
+          "parent_comment_id": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "default": null
+          },
           "author_worker": {
             "type": "object",
             "properties": {
